# jacobian-lens-readable

./: .gitignore  CONTRIBUTING.md  README.md  example.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: index.html  maryland-human-services.html  maryland-mdot-disambiguation.html  multihop.html  off-by-one.html  overdose.html
docs/am/: index.html  maryland-human-services.html  maryland-mdot-disambiguation.html  multihop.html  off-by-one.html  overdose.html
docs/es/: index.html  maryland-human-services.html  maryland-mdot-disambiguation.html  multihop.html  off-by-one.html  overdose.html
docs/fr/: index.html  maryland-human-services.html  maryland-mdot-disambiguation.html  multihop.html  off-by-one.html  overdose.html
docs/zh/: index.html  maryland-human-services.html  maryland-mdot-disambiguation.html  multihop.html  off-by-one.html  overdose.html
jlens_readable/: __init__.py  readable.py  strings.py
prompts/: am.md  es.md  fr.md  zh.md
scripts/: build_demos.py
